--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8"/>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
   <title>Squidgy Round The World</title>
+  <link rel="stylesheet" href="assets/main.css">
   <script type="text/javascript" src="assets/levels.js"></script>
   <script type="text/javascript" src="main.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
