--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 </head>
 <body>
+<div id="playfield" class="level1">
+</div>
 </body>
 </html>
