--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 </head>
 <body>
-<div id="playfield" class="level1">
-</div>
+<div class="border"></div>
+<div id="playfield" class="level1"></div>
+<div id="score"><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div></div>
+<div id="lives"><div class="tile s0"></div><div class="tile s0"></div><div class="tile s5"></div></div>
+<div id="time"><div class="tile s0"></div><div class="tile s8"></div><div class="tile s0"></div></div>
 </body>
 </html>
