Added keyboard handler

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 <div id="score"><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div></div>
 <div id="lives"><div class="tile s0"></div><div class="tile s0"></div><div class="tile s5"></div></div>
 <div id="time"><div class="tile s0"></div><div class="tile s8"></div><div class="tile s0"></div></div>
+<div id="debug" style="color:white; position:absolute; top:500px;"></div>
 </body>
 </html>
