--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 </head>
 <body>
-<div class="border"></div>
-<div id="playfield" class="level1"></div>
-<div id="score"><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div></div>
-<div id="lives"><div class="tile s0"></div><div class="tile s0"></div><div class="tile s5"></div></div>
-<div id="time"><div class="tile s0"></div><div class="tile s8"></div><div class="tile s0"></div></div>
-<div id="debug" style="color:white; position:absolute; top:500px;"></div>
+<div id="wrapper">
+  <div class="border"></div>
+  <div id="playfield" level="1"></div>
+  <div id="player"></div>
+  <div id="ui">
+    <div id="score"><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div></div>
+    <div id="lives"><div class="tile s0"></div><div class="tile s0"></div><div class="tile s5"></div></div>
+    <div id="time"><div class="tile s0"></div><div class="tile s8"></div><div class="tile s0"></div></div>
+    <div id="debug" style="color:white; position:absolute; top:500px;"></div>
+  </div>
+</div>
 </body>
 </html>
