Fixed display of player

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 </head>
 <body>
-<div id="wrapper">
+<div id="wrapper" level="1">
   <div class="border"></div>
-  <div id="playfield" level="1"></div>
+  <div id="playfield"></div>
   <div id="player"></div>
   <div id="ui">
     <div id="score"><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div></div>
