Add player/enemy movement, score, animation

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
 <div id="wrapper" level="1">
   <div class="border"></div>
   <div id="playfield"></div>
-  <div id="player"></div>
   <div id="ui">
-    <div id="score"><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div><div class="tile s0"></div></div>
-    <div id="lives"><div class="tile s0"></div><div class="tile s0"></div><div class="tile s5"></div></div>
-    <div id="time"><div class="tile s0"></div><div class="tile s8"></div><div class="tile s0"></div></div>
+    <div id="score"></div>
+    <div id="lives"><div class="tile" tile="0"></div><div class="tile" tile="0"></div><div class="tile" tile="5"></div></div>
+    <div id="time"><div class="tile" tile="0"></div><div class="tile" tile="8"></div><div class="tile" tile="0"></div></div>
     <div id="debug" style="color:white; position:absolute; top:500px;"></div>
   </div>
 </div>
