Added updating display of lives

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id="playfield"></div>
   <div id="ui">
     <div id="score"></div>
-    <div id="lives"><div class="tile" tile="0"></div><div class="tile" tile="0"></div><div class="tile" tile="5"></div></div>
+    <div id="lives"></div>
     <div id="time"><div class="tile" tile="0"></div><div class="tile" tile="8"></div><div class="tile" tile="0"></div></div>
     <div id="debug" style="color:white; position:absolute; top:500px;"></div>
   </div>
