Added countdown timer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id="ui">
     <div id="score"></div>
     <div id="lives"></div>
-    <div id="time"><div class="tile" tile="0"></div><div class="tile" tile="8"></div><div class="tile" tile="0"></div></div>
+    <div id="time"></div>
     <div id="debug" style="color:white; position:absolute; top:500px;"></div>
   </div>
 </div>
