--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 </head>
 <body>
-<div id="wrapper" level="1">
+<div id="wrapper" level="1" supp="1">
   <div class="border"></div>
   <div id="playfield"></div>
   <div id="ui">
