Added stubs for handling shields

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="score"></div>
     <div id="lives"></div>
     <div id="time"></div>
+    <div id="shields"></div>
     <div id="debug" style="color:white; position:absolute; top:500px;"></div>
   </div>
 </div>
